# termex

./: lab1.py  lab2.py  lab3.py  pyproject.toml
