[tool.poetry]
name = "termex"
version = "0.1.0"
description = ""
authors = ["zmskv <zmskvxd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numba = "^0.60.0"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
